--- a/assets/scss/partials/_particles.scss
+++ b/assets/scss/partials/_particles.scss
@@ -16,5 +16,5 @@ canvas {
   background-repeat: no-repeat;
   overflow: scroll;
 
-  @include gradient($dark-grey, rgba(0, 0, 0, 0.9), horizontal);
+  @include gradient($dark-grey, rgba(0, 0, 0, 1), horizontal);
 }
